--- a/index.html
+++ b/index.html
@@ -2,12 +2,13 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8" />
-        <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+        <link rel="icon" type="image/png" href="/calculator.png" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Vite + TS</title>
+        <title>Calculator App</title>
     </head>
     <body>
         <!--app block -->
+        <h1>Let's do SUM maths!</h1>
         <div class="calculator">
             <input />
             <div>
