added styling to body, h1 and initial calculator styling

--- a/index.html
+++ b/index.html
@@ -10,7 +10,13 @@
         <!--app block -->
         <h1>Let's do SUM maths!</h1>
         <div class="calculator">
-            <input />
+            <input
+                type="text"
+                placeholder="0"
+                id="display"
+                class="calculator__display"
+                value=""
+            />
             <div>
                 <button>AC</button>
                 <button>DEL</button>
