--- a/index.html
+++ b/index.html
@@ -17,26 +17,55 @@
                 class="calculator__display"
                 value=""
             />
-            <div>
-                <button>AC</button>
-                <button>DEL</button>
-                <button>^</button>
-                <button>/</button>
-                <button>7</button>
-                <button>8</button>
-                <button>9</button>
-                <button>*</button>
-                <button>4</button>
-                <button>5</button>
-                <button>6</button>
-                <button>-</button>
-                <button>1</button>
-                <button>2</button>
-                <button>3</button>
-                <button>+</button>
-                <button>0</button>
-                <button>.</button>
-                <button>=</button>
+            <div class="calculator__buttons">
+                <button class="calculator__button calculator__button--operator">
+                    AC
+                </button>
+                <button class="calculator__button calculator__button--operator">
+                    DEL
+                </button>
+                <button class="calculator__button calculator__button--operator">
+                    ^
+                </button>
+                <button class="calculator__button calculator__button--operator">
+                    /
+                </button>
+
+                <button class="calculator__button">7</button>
+                <button class="calculator__button">8</button>
+                <button class="calculator__button">9</button>
+                <button class="calculator__button calculator__button--operator">
+                    *
+                </button>
+
+                <button class="calculator__button">4</button>
+                <button class="calculator__button">5</button>
+                <button class="calculator__button">6</button>
+                <button class="calculator__button calculator__button--operator">
+                    -
+                </button>
+
+                <button class="calculator__button">1</button>
+                <button class="calculator__button">2</button>
+                <button class="calculator__button">3</button>
+
+                <button class="calculator__button calculator__button--operator">
+                    +
+                </button>
+
+                <button
+                    class="calculator__button calculator__button--double-width"
+                >
+                    0
+                </button>
+
+                <button class="calculator__button">.</button>
+                <button
+                    id="equals"
+                    class="calculator__button calculator__button--operator"
+                >
+                    =
+                </button>
             </div>
         </div>
         <script type="module" src="/src/main.ts"></script>
