removed '^' button and adjusted button styling

--- a/index.html
+++ b/index.html
@@ -18,14 +18,11 @@
             value=""
         />
         <div class="calculator__buttons">
-            <button id="clear" class="calculator__button calculator__button--operator">
+            <button id="clear" class="calculator__button calculator__button--operator calculator__button--double-width">
                 AC
             </button>
             <button id="delete" class="calculator__button calculator__button--operator">
                 DEL
-            </button>
-            <button class="calculator__button calculator__button--operator">
-                ^
             </button>
             <button class="calculator__button calculator__button--operator">
                 /
