--- a/index.html
+++ b/index.html
@@ -62,6 +62,6 @@
             </button>
         </div>
     </div>
-    <script type="module" src="src/main.ts"></script>
+    <script type="module" src="./src/main.ts"></script>
 </body>
 </html>
