--- a/index.html
+++ b/index.html
@@ -1,67 +1,75 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="/calculator.png" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Calculator App</title>
-</head>
-<body>
-    <!--app block -->
-    <h1>Let's do SUM maths!</h1>
-    <div class="calculator">
-        <input
-            type="text"
-            placeholder="0"
-            id="display"
-            class="calculator__display"
-            value=""
-        />
-        <div class="calculator__buttons">
-            <button id="clear" class="calculator__button calculator__button--operator calculator__button--double-width">
-                AC
-            </button>
-            <button id="delete" class="calculator__button calculator__button--operator">
-                DEL
-            </button>
-            <button class="calculator__button calculator__button--operator">
-                /
-            </button>
+    <head>
+        <meta charset="UTF-8" />
+        <link rel="icon" type="image/png" href="/calculator.png" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Calculator App</title>
+    </head>
+    <body>
+        <h1>Let's do SUM maths!</h1>
+        <div class="calculator">
+            <input
+                type="text"
+                placeholder="0"
+                id="display"
+                class="calculator__display"
+                value=""
+            />
+            <div class="calculator__buttons">
+                <button
+                    id="clear"
+                    class="calculator__button calculator__button--operator calculator__button--double-width"
+                >
+                    AC
+                </button>
+                <button
+                    id="delete"
+                    class="calculator__button calculator__button--operator"
+                >
+                    DEL
+                </button>
+                <button class="calculator__button calculator__button--operator">
+                    /
+                </button>
 
-            <button class="calculator__button">7</button>
-            <button class="calculator__button">8</button>
-            <button class="calculator__button">9</button>
-            <button class="calculator__button calculator__button--operator">
-                *
-            </button>
+                <button class="calculator__button">7</button>
+                <button class="calculator__button">8</button>
+                <button class="calculator__button">9</button>
+                <button class="calculator__button calculator__button--operator">
+                    *
+                </button>
 
-            <button class="calculator__button">4</button>
-            <button class="calculator__button">5</button>
-            <button class="calculator__button">6</button>
-            <button class="calculator__button calculator__button--operator">
-                -
-            </button>
+                <button class="calculator__button">4</button>
+                <button class="calculator__button">5</button>
+                <button class="calculator__button">6</button>
+                <button class="calculator__button calculator__button--operator">
+                    -
+                </button>
 
-            <button class="calculator__button">1</button>
-            <button class="calculator__button">2</button>
-            <button class="calculator__button">3</button>
+                <button class="calculator__button">1</button>
+                <button class="calculator__button">2</button>
+                <button class="calculator__button">3</button>
 
-            <button class="calculator__button calculator__button--operator">
-                +
-            </button>
+                <button class="calculator__button calculator__button--operator">
+                    +
+                </button>
 
-            <button
-                class="calculator__button calculator__button--double-width"
-            >
-                0
-            </button>
+                <button
+                    class="calculator__button calculator__button--double-width"
+                >
+                    0
+                </button>
 
-            <button class="calculator__button">.</button>
-            <button id="equals" class="calculator__button calculator__button--operator">
-                =
-            </button>
+                <button class="calculator__button">.</button>
+                <button
+                    id="equals"
+                    class="calculator__button calculator__button--operator"
+                >
+                    =
+                </button>
+            </div>
         </div>
-    </div>
-    <script type="module" src="./src/main.ts"></script>
-</body>
+        <script type="module" src="./src/main.ts"></script>
+    </body>
 </html>
